--- a/deno.json
+++ b/deno.json
@@ -2,46 +2,46 @@
   "name": "@siguici/buno",
   "version": "0.1.3",
   "exports": {
-    ".": "./jsr/index.ts",
-    "./polyfill": "./jsr/polyfill.ts",
-    "./assert": "./jsr/assert.ts",
-    "./async_hooks": "./jsr/async_hooks.ts",
-    "./buffer": "./jsr/buffer.ts",
-    "./child_process": "./jsr/child_process.ts",
-    "./console": "./jsr/console.ts",
-    "./crypto": "./jsr/crypto.ts",
-    "./dgram": "./jsr/dgram.ts",
-    "./diagnostics_channel": "./jsr/diagnostics_channel.ts",
-    "./dns": "./jsr/dns.ts",
-    "./events": "./jsr/events.ts",
-    "./fs": "./jsr/fs.ts",
-    "./http": "./jsr/http.ts",
-    "./http2": "./jsr/http2.ts",
-    "./https": "./jsr/https.ts",
-    "./module": "./jsr/module.ts",
-    "./net": "./jsr/net.ts",
-    "./os": "./jsr/os.ts",
-    "./path": "./jsr/path.ts",
-    "./perf_hooks": "./jsr/perf_hooks.ts",
-    "./process": "./jsr/process.ts",
-    "./punycode": "./jsr/punycode.ts",
-    "./querystring": "./jsr/querystring.ts",
-    "./readline": "./jsr/readline.ts",
-    "./stream": "./jsr/stream.ts",
-    "./string_decoder": "./jsr/string_decoder.ts",
-    "./timers": "./jsr/timers.ts",
-    "./tls": "./jsr/tls.ts",
-    "./tty": "./jsr/tty.ts",
-    "./url": "./jsr/url.ts",
-    "./util": "./jsr/util.ts",
-    "./vm": "./jsr/vm.ts",
-    "./worker_threads": "./jsr/worker_threads.ts",
-    "./zlib": "./jsr/zlib.ts"
+    ".": "./deno/index.ts",
+    "./polyfill": "./deno/polyfill.ts",
+    "./assert": "./deno/assert.ts",
+    "./async_hooks": "./deno/async_hooks.ts",
+    "./buffer": "./deno/buffer.ts",
+    "./child_process": "./deno/child_process.ts",
+    "./console": "./deno/console.ts",
+    "./crypto": "./deno/crypto.ts",
+    "./dgram": "./deno/dgram.ts",
+    "./diagnostics_channel": "./deno/diagnostics_channel.ts",
+    "./dns": "./deno/dns.ts",
+    "./events": "./deno/events.ts",
+    "./fs": "./deno/fs.ts",
+    "./http": "./deno/http.ts",
+    "./http2": "./deno/http2.ts",
+    "./https": "./deno/https.ts",
+    "./module": "./deno/module.ts",
+    "./net": "./deno/net.ts",
+    "./os": "./deno/os.ts",
+    "./path": "./deno/path.ts",
+    "./perf_hooks": "./deno/perf_hooks.ts",
+    "./process": "./deno/process.ts",
+    "./punycode": "./deno/punycode.ts",
+    "./querystring": "./deno/querystring.ts",
+    "./readline": "./deno/readline.ts",
+    "./stream": "./deno/stream.ts",
+    "./string_decoder": "./deno/string_decoder.ts",
+    "./timers": "./deno/timers.ts",
+    "./tls": "./deno/tls.ts",
+    "./tty": "./deno/tty.ts",
+    "./url": "./deno/url.ts",
+    "./util": "./deno/util.ts",
+    "./vm": "./deno/vm.ts",
+    "./worker_threads": "./deno/worker_threads.ts",
+    "./zlib": "./deno/zlib.ts"
   },
-  "include": ["./deno.json", "jsr/*.ts", "deno/*.js", "README.md"],
+  "include": ["./deno.json", "deno/*.ts", "deno/*.js", "README.md"],
   "exclude": [
     ".*",
-    "jsr/*.test.ts",
+    "deno/*.test.ts",
     "node/*",
     "src/*",
     "scripts/*",
@@ -52,14 +52,14 @@
   ],
   "publish": {
     "include": [
-      "jsr/**",
+      "deno/**",
       "deno.json",
       "package.json",
       "tsconfig.json",
       "README.md",
       "LICENSE.md"
     ],
-    "exclude": ["!jsr/*.ts", "deno/*.js"]
+    "exclude": ["!deno/*.ts", "deno/*.js"]
   },
   "compilerOptions": {
     "lib": [
@@ -85,7 +85,7 @@
     "check": "deno task check:fmt && deno task check:lint && deno task check:types",
     "check:fmt": "deno fmt --check",
     "check:lint": "deno lint",
-    "check:types": "deno check jsr/*.ts deno/*.js",
+    "check:types": "deno check deno/*.ts deno/*.js",
     "fix": "deno lint --fix && deno fmt"
   }
 }
