:see_no_evil: Ignore publishing .d.ts files to JSR

--- a/deno.json
+++ b/deno.json
@@ -60,7 +60,7 @@
       "README.md",
       "LICENSE.md"
     ],
-    "exclude": ["!deno/*.ts", "deno/*.js"]
+    "exclude": ["!deno/*.ts", "deno/*.d.ts", "deno/*.js"]
   },
   "compilerOptions": {
     "lib": [
