:green_heart: Organize files specific to Node and Bun

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
       },
       "suspicious": {
         "noImplicitAnyLet": "off",
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noConfusingVoidType": "off"
       }
     },
     "ignore": ["node_modules", "jsr", "deno", "node"]
