--- a/package.json
+++ b/package.json
@@ -282,6 +282,7 @@
     "build": "bun run build.node && bun run build.deno",
     "build.node": "rimraf node && tsc --build && bun scripts/build.ts",
     "build.deno": "rimraf deno/*.{js,ts,d.ts} && denoify --out deno && bun scripts/denoify.ts",
+    "changeset": "changeset",
     "check": "biome ci . && knip",
     "check.format": "biome format .",
     "check.lint": "biome check .",
@@ -292,16 +293,22 @@
     "format": "biome format --write .",
     "knip": "knip",
     "lint": "biome check --write .",
+    "release": "pnpm build && changeset publish",
+    "prepare": "husky && gitmoji -i",
     "unsed": "knip --fix"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@changesets/cli": "^2.27.11",
     "@types/bun": "^1.1.6",
     "@types/node": "^22.4.1",
     "denoify": "^1.6.13",
     "esbuild": "^0.23.1",
+    "gitmoji-cli": "^9.5.0",
     "globby": "^14.0.2",
+    "husky": "^9.1.7",
     "knip": "^5.27.2",
+    "pkg-pr-new": "^0.0.39",
     "rimraf": "^6.0.1",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
