💚 Use @siguici's `setup-js` action

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,10 +27,12 @@ jobs:
       - name: 🚚 Checkout code
         uses: actions/checkout@v4
 
-      - name: 🦄 Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: 🦄 Setup Bun & NPM
+        uses: siguici/setup-js@v1
         with:
-          bun-version: ${{ matrix.bun }}
+          runtime: bun
+          version: ${{ matrix.bun }}
+          pm: npm
 
       - name: 🔖 Create Release Pull Request or Publish to NPM 🚀
         id: changesets
