Setup Deno 🦕 for releases

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,7 @@ jobs:
         os: [ubuntu-latest]
         bun: [1.1.24]
         node: [22.11.0]
+        deno: [1.45.5]
         experimental: [false]
 
     name: 🔖 Release Beno using Bun@${{ matrix.bun }} & Node@{{ matrix.node }} under ${{ matrix.os }}
@@ -37,6 +38,11 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: ${{ matrix.bun }}
+
+      - name: 🦕 Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: ${{ matrix.deno }}
 
       - name: 🔖 Create Release Pull Request or Publish to NPM 🚀
         id: changesets
